2.3/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-mtool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-mtool
  template:
    metadata:
      labels:
        app: nginx-mtool
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - name: http
          containerPort: 8080
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: index
        configMap:
          name: nginx-config
