2.3/deployNginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ssl
  labels:
    app: nginx-ssl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ssl
  template:
    metadata:
      labels:
        app: nginx-ssl
    spec:
      containers:
      - name: nginx-ssl
        image: nginx:latest
        ports:
          - containerPort: 80
        volumeMounts:
          - name: nginx-config
            mountPath: /usr/share/nginx/html
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-configmap
