2.3/svcSSL.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
    - name: nginx
      protocol: TCP
      port: 443
      targetPort: 80  
  selector:
    app: nginx-ssl
